# backend

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
api/: main.py
app/: main.py  settings.py
app/api/v1/: api.py
app/api/v1/endpoints/: conferences.py  forms.py  health.py  users.py
app/common/: enumerations.py
app/db/: client.py
app/db/dto/: authorization_dto.py  base_dto.py  conference_dto.py  form_dto.py  form_responses_dto.py  user_dto.py
app/db/dto/ext/: object_id.py
app/db/dto/ext/models/: location.py
bot/: __init__.py  client.py  logger.py
models/: mundo_base_model.py
shared/models/: conference.py
